Don't pass --add-exports to jdk8u java inside docker
These are JDK9+ module specific parameters.