@@ -127,11 +127,7 @@ public class TestMemoryAwareness {
             .addDockerOpts(
                 "--memory", memoryAllocation,
                 "--memory-swap", swapAllocation
-            )
-            // CheckOperatingSystemMXBean uses Metrics (jdk.internal.platform) for
-            // diagnostics
-            .addJavaOpts("--add-exports")
-            .addJavaOpts("java.base/jdk.internal.platform=ALL-UNNAMED");
+            );
 
         OutputAnalyzer out = DockerTestUtils.dockerRunJava(opts);
             out.shouldHaveExitValue(0)
